feat: redesign domain model and implement authentication infrastructure